--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.14.0",
     "jQuery": "^1.7.4",
     "jsdom": "^9.9.1",
+    "mongodb": "^2.2.24",
     "node-php": "0.0.1",
     "twitter": "^1.7.0"
   }
