--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "gttg22",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
     "express": "^4.14.0",
     "jQuery": "^1.7.4",
