--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webassignment",
+  "name": "scrum",
   "version": "1.0.0",
-  "description": "Web Programming Assignment - Programming Paradigms - Steven Bradley",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
