--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsdom": "^9.9.1",
     "mongodb": "^2.2.24",
     "node-php": "0.0.1",
+    "quagga": "^0.11.6",
     "twitter": "^1.7.0"
   }
 }
