--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "author": "gttg22",
+  "author": "Group7",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
     "express": "^4.14.0",
+    "fs": "0.0.1-security",
     "jQuery": "^1.7.4",
     "jsdom": "^9.9.1",
     "mongodb": "^2.2.24",
