--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsdom": "^9.9.1",
     "mongodb": "^2.2.24",
     "node-php": "0.0.1",
+    "nodemailer": "^3.1.8",
     "quagga": "^0.11.6",
     "sha1": "^1.1.1",
     "twitter": "^1.7.0"
