--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^3.1.8",
     "quagga": "^0.11.6",
     "sha1": "^1.1.1",
-    "twitter": "^1.7.0"
+    "twitter": "^1.7.0",
+    "uuid": "^3.0.1"
   }
 }
