--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express": "^4.14.0",
     "fs": "0.0.1-security",
     "ip": "^1.1.5",
-    "jQuery": "^1.7.4",
+    "jquery": "^3.2.1",
     "jsdom": "^9.9.1",
     "mongodb": "^2.2.24",
     "node-php": "0.0.1",
