--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ip": "^1.1.5",
     "jquery": "^3.2.1",
     "jsdom": "^9.9.1",
+    "leaflet": "^1.0.3",
     "mongodb": "^2.2.24",
     "node-php": "0.0.1",
     "nodemailer": "^3.1.8",
