--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
     "express": "^4.14.0",
+    "express-sslify": "^1.2.0",
     "fs": "0.0.1-security",
     "ip": "^1.1.5",
     "jquery": "^3.2.1",
